untitled/tests_ex22/tough_test/error.txt
cccgcc.c:6:2: error: expected identifier or ‘(’ before ‘}’ token
    6 | }}
      |  ^
